--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "homepage": "https://github.com/FreddieCodes/Word-Count#readme",
   "devDependencies": {
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "jasmine": "^2.8.0"
   }
 }
